# helloworld

./: CMakeLists.txt  helloworld.pro  helloworld.qbs
